samples/_failures_safe/1761191152_85f6fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80918666.c: In function ‘main’:
./samples/SAFE/__tmp_80918666.c:155:17: error: expected ‘;’ at end of input
  155 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_80918666.c:155:9: error: expected declaration or statement at end of input
  155 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_80918666.c:155:9: error: expected declaration or statement at end of input
